--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Redot Proposal Viewer</title>
-    <link rel="icon" type="image/svg" href="/favicon.svg">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
     <script defer src="js/ky.umd.min.js"></script>
     <script defer src="js/alpine.min.js"></script>
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-dark bg-dark nav-shadow">
     <div class="d-flex flex-row">
         <a href=".">
-            <img src="/assets/logo.svg" width="200" height="48" class="d-inline-block align-top logo" alt="">
+            <img src="./assets/logo.png" width="126" height="48" class="d-inline-block align-top logo" alt="">
         </a>
         <h4 class="text-light brand-text">Proposal Viewer</h4>
     </div>
