Add links to open an issue or start a discussion

--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
     <div class="row">
         <div class="col-md-12">
             <h1 class="text-center mt-5">Welcome to Redot Proposal Viewer</h1>
-            <p class="px-5 mt-4"> This page lists all open <a href="https://github.com/Redot-Engine/redot-proposals">Redot proposals</a> with the ability to sort by popularity (highest number of +1 reactions, then lowest number of -1 reactions, then highest number of comments), or by newest or oldest. </p>
+            <p class="px-5 mt-4"> This page lists all open <a href="https://github.com/Redot-Engine/redot-proposals">Redot proposals</a> with the ability to sort by popularity (highest number of +1 reactions, then lowest number of -1 reactions, then highest number of comments), or by newest or oldest. View a proposal and use a thumbs up or thumbs down to voice your opinion on the proposal.</p>
             <p class="px-5">
                 <a href="https://github.com/Redot-Engine/redot-proposals-viewer.github.io">Contribute to this proposal viewer on GitHub!</a>
             </p>
+            <p class="px-5 mt-5">
+                Not finding a proposal similar to yours? <b>Submit a proposal to Redot Proposals!</b>
+            </p>
+            <ul class="px-5">
+                <li>
+                    <p> If you have a technical explanation for your proposal, please <a href="https://github.com/Redot-Engine/redot-proposals/issues/new/choose">open a new issue</a></p>
+                </li>
+                <li>
+                    <p> If you have a general idea or feature request, please <a href="https://github.com/Redot-Engine/redot-proposals/discussions/new">start a new discussion</a></p>
+                </li>
+            </ul>
         </div>
     </div>
     <div class="row">
